--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,11 +15,17 @@
 
     <string name="SignInLabel">User Sign IN</string>
     <string name="userIdLabel">User ID</string>
-    <string name="userID"></string>
+    <string name="userID">Enter UserID</string>
     <string name="PasswordLabel">Password</string>
-    <string name="Password2"></string>
+    <string name="Password2">Enter Password</string>
     <string name="Login">Login</string>
     <string name="Edit">edituser</string>
+
+    <string name="Name">name</string>
+    <string name="Email">email</string>
+    <string name="Phone">phone</string>
+    <string name="DOB">dob</string>
+    <string name="Qualification">qualification</string>
 
 
 
